// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTrackRenderer > レンダリングイベントが正しく発行される 1`] = `
{
  "renderingEventInfos": [
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "phrasesGenerated",
    },
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "cacheLoaded",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "queryHash": "407fd92072dbd5cfe1359fff3cf7827d255486ceeafcb7c519fcb9d0413c39f7",
      "queryKey": "e27d3962843c012dbb8c452040417dbf63052ed9b4465960374fdd774771c550",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
      "singingPitchKey": "e7d3388c7ac626dba5fe52e6d8cb4b530757d25abb7ab1d99d1d67c0b1f0cd7f",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
      "singingVolumeKey": "e94ce0f52db059fa1f8015c4a6646c82c07a692f6ba4852111c5cc5ba6e7bf66",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
      "singingVoiceKey": "f0335f4115dc43814dc0c8a08fcaefa88c9fd979f494b80ca5e3e79558da1d28",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "position": 2880,
          },
        ],
        "queryHash": "407fd92072dbd5cfe1359fff3cf7827d255486ceeafcb7c519fcb9d0413c39f7",
        "queryKey": "e27d3962843c012dbb8c452040417dbf63052ed9b4465960374fdd774771c550",
        "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
        "singingPitchKey": "e7d3388c7ac626dba5fe52e6d8cb4b530757d25abb7ab1d99d1d67c0b1f0cd7f",
        "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
        "singingVoiceKey": "f0335f4115dc43814dc0c8a08fcaefa88c9fd979f494b80ca5e3e79558da1d28",
        "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
        "singingVolumeKey": "e94ce0f52db059fa1f8015c4a6646c82c07a692f6ba4852111c5cc5ba6e7bf66",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "queryHash": "a8f2b7b595373ed7bd8d6b4b68fb6c2654a82b8c0132e37dc1e9a75128d657fa",
      "queryKey": "ff245a221cb619ee7585a7da78b298ecceb7d69e399b56302ffee5289d0facb2",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
      "singingPitchKey": "ba9c78e46784de50af4114f68af2388ff672cb6b0b9480a9a3a25a81c7e50550",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
      "singingVolumeKey": "6f1d3bc4eb74eee556e0267a5c56b4fcf15a0001b31dbc6aba15d6962d9f0cf6",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
      "singingVoiceKey": "23107c07791a14a185fdcd508c0cebb73731ea825a0d7a27d6c962636aaf9305",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "position": 4320,
          },
        ],
        "queryHash": "a8f2b7b595373ed7bd8d6b4b68fb6c2654a82b8c0132e37dc1e9a75128d657fa",
        "queryKey": "ff245a221cb619ee7585a7da78b298ecceb7d69e399b56302ffee5289d0facb2",
        "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
        "singingPitchKey": "ba9c78e46784de50af4114f68af2388ff672cb6b0b9480a9a3a25a81c7e50550",
        "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
        "singingVoiceKey": "23107c07791a14a185fdcd508c0cebb73731ea825a0d7a27d6c962636aaf9305",
        "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
        "singingVolumeKey": "6f1d3bc4eb74eee556e0267a5c56b4fcf15a0001b31dbc6aba15d6962d9f0cf6",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "queryHash": "7cf49460e459d9183231d696ccca779a9e4c78ee5b5fe2c56550153a7aed117c",
      "queryKey": "3778275a33dbc32084b47247d9ffef6ffafc9246c45fc98bab616df7fdbf651a",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
      "singingPitchKey": "2ec6d5e2258856f0386b99316e0338523174eff333e73532ae08ca1a08c215d6",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
      "singingVolumeKey": "591aabcfce0cd1365e426fac6a50c2dcea1879ddc35c251d6c0a43fc2012dda7",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
      "singingVoiceKey": "2ef0cc22ff4a57ba57c486ba20143d9d76e72f8a02379b9ff60f9abf52920dce",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "position": 5280,
          },
        ],
        "queryHash": "7cf49460e459d9183231d696ccca779a9e4c78ee5b5fe2c56550153a7aed117c",
        "queryKey": "3778275a33dbc32084b47247d9ffef6ffafc9246c45fc98bab616df7fdbf651a",
        "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
        "singingPitchKey": "2ec6d5e2258856f0386b99316e0338523174eff333e73532ae08ca1a08c215d6",
        "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
        "singingVoiceKey": "2ef0cc22ff4a57ba57c486ba20143d9d76e72f8a02379b9ff60f9abf52920dce",
        "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
        "singingVolumeKey": "591aabcfce0cd1365e426fac6a50c2dcea1879ddc35c251d6c0a43fc2012dda7",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingComplete",
    },
  ],
}
`;

exports[`SongTrackRenderer > 正しいレンダリング結果が返される 1`] = `
{
  "renderingResultInfo": {
    "phraseInfos": Map {
      "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "position": 2880,
          },
        ],
        "queryHash": "407fd92072dbd5cfe1359fff3cf7827d255486ceeafcb7c519fcb9d0413c39f7",
        "queryKey": "e27d3962843c012dbb8c452040417dbf63052ed9b4465960374fdd774771c550",
        "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
        "singingPitchKey": "e7d3388c7ac626dba5fe52e6d8cb4b530757d25abb7ab1d99d1d67c0b1f0cd7f",
        "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
        "singingVoiceKey": "f0335f4115dc43814dc0c8a08fcaefa88c9fd979f494b80ca5e3e79558da1d28",
        "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
        "singingVolumeKey": "e94ce0f52db059fa1f8015c4a6646c82c07a692f6ba4852111c5cc5ba6e7bf66",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "position": 4320,
          },
        ],
        "queryHash": "a8f2b7b595373ed7bd8d6b4b68fb6c2654a82b8c0132e37dc1e9a75128d657fa",
        "queryKey": "ff245a221cb619ee7585a7da78b298ecceb7d69e399b56302ffee5289d0facb2",
        "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
        "singingPitchKey": "ba9c78e46784de50af4114f68af2388ff672cb6b0b9480a9a3a25a81c7e50550",
        "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
        "singingVoiceKey": "23107c07791a14a185fdcd508c0cebb73731ea825a0d7a27d6c962636aaf9305",
        "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
        "singingVolumeKey": "6f1d3bc4eb74eee556e0267a5c56b4fcf15a0001b31dbc6aba15d6962d9f0cf6",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "position": 5280,
          },
        ],
        "queryHash": "7cf49460e459d9183231d696ccca779a9e4c78ee5b5fe2c56550153a7aed117c",
        "queryKey": "3778275a33dbc32084b47247d9ffef6ffafc9246c45fc98bab616df7fdbf651a",
        "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
        "singingPitchKey": "2ec6d5e2258856f0386b99316e0338523174eff333e73532ae08ca1a08c215d6",
        "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
        "singingVoiceKey": "2ef0cc22ff4a57ba57c486ba20143d9d76e72f8a02379b9ff60f9abf52920dce",
        "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
        "singingVolumeKey": "591aabcfce0cd1365e426fac6a50c2dcea1879ddc35c251d6c0a43fc2012dda7",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
    },
    "type": "complete",
  },
}
`;
